@@ -106,7 +106,6 @@ JAVA_RELEASE_TARGETS = %w[
   //java/src/org/openqa/selenium/devtools/v85:v85.publish
   //java/src/org/openqa/selenium/devtools/v93:v93.publish
   //java/src/org/openqa/selenium/devtools/v94:v94.publish
-  //java/src/org/openqa/selenium/devtools:devtools.publish
   //java/src/org/openqa/selenium/edge:edge.publish
   //java/src/org/openqa/selenium/firefox/xpi:xpi.publish
   //java/src/org/openqa/selenium/firefox:firefox.publish
