@@ -12,7 +12,6 @@ java_library(
     deps = [
         "//java:auto-service",
         "//java/src/org/openqa/selenium/chromium",
-        "//java/src/org/openqa/selenium/devtools",
         "//java/src/org/openqa/selenium/grid/config",
         "//java/src/org/openqa/selenium/grid/data",
         "//java/src/org/openqa/selenium/grid/node",
